--- a/src/app/components/contact/contact.css
+++ b/src/app/components/contact/contact.css
@@ -31,7 +31,6 @@
 }
 
 .contact .footer {
-	position: absolute;
 	bottom: 0;
 	height: 100px;
 	background-color: #252c2d;
